--- a/style.css
+++ b/style.css
@@ -1,25 +1,38 @@
 html body {
     background-color: #1F1F1F;
     color: #D3C7B4;
-    margin: 0;
+    margin: 0px 20% 0px 20%;
     font-family: Helvetica;
 }
 
 .nav {
-  text-align: center;
-  margin: 20px 20px;
+  margin: 5% 0% 0% 0%;
+  padding: 0px 0px;
+  display: flex;
 }
 
 .nav #logo {
-  float: center;
   position: relative;
-  height: 20%;
+  height: 1.5%;
+  margin-right: 2%;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .nav h1 {
-  display: inline;
-  padding: 0px 2%;
-  position: absolute;
-  float: center;
-  text-align: center;
+  position: relative;
+  display: inline-block;
+  margin: 1% 0%;
+}
+
+.nav span {
+  color: #D06003;
+}
+
+hr {
+  position: relative;
+  margin: 2% 0%;
+  height: 2px;
+  background-color:#333333;
+  border: none;
 }
