--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ hr {
   vertical-align: center;
   text-decoration: none;
   width: 20%;
+  margin-top: 3%;
 }
 .uploadBtn label {
   vertical-align: middle;
