--- a/style.css
+++ b/style.css
@@ -43,8 +43,9 @@ hr {
 
 .uploadBtn{
   background-color: #D06003;
-  font-size: 20px;
+  font-size: 120%;
   padding-top: 2%;
+  padding-bottom: 2%;
   font-weight: bold;
   border: none;
   text-align: center;
@@ -52,14 +53,15 @@ hr {
   text-decoration: none;
   width: 20%;
   margin-top: 3%;
+  border-radius: 10px;
 }
 
 .uploadBtn label {
-  vertical-align: middle;
+ vertical-align: middle;
 }
 
 .uploadBtn #up {
   padding: 0px 0px;
   vertical-align: middle;
-  padding-bottom: 1%;
+  padding: 1% 0% 1% 0%;
 }
