--- a/style.css
+++ b/style.css
@@ -82,9 +82,18 @@ li {
   background-color:#333333;
   text-decoration: none;
   position: relative;
-  margin: auto;
   text-align: center;
   border-radius: 20px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+li .first {
+  vertical-align: top;
+}
+
+li .second {
+  vertical-align: top;
 }
 
 li img {
