--- a/style.css
+++ b/style.css
@@ -67,6 +67,12 @@ hr {
   padding: 1% 0% 1% 0%;
 }
 
+.uploadBtn #right {
+  padding: 0px 0px;
+  vertical-align: middle;
+  padding: 1% 0% 1% 0%;
+}
+
 ul {
   padding: 0px 0px;
   display: flex;
