--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html body {
     font-family: Helvetica;
     text-transform: lowercase;
     min-height: 100%;
+    min-width: 60%;
     font-size: 17px;
 }
 
@@ -131,11 +132,23 @@ li img {
 }
 
 .footer1 {
-  position: absolute;
   bottom: 0;
   font-size: 16px;
 }
 
 .footer2 {
   font-size: 16px;
+}
+
+.map {
+  text-align: center;
+  float: left;
+  width: 100%;
+  height: 100%;
+}
+
+.map iframe {
+  position: relative;
+  margin: 5% auto 5% auto;
+  border: 0;
 }
