--- a/style.css
+++ b/style.css
@@ -158,8 +158,12 @@ a:active {
 footer {
   font-size: 16px;
   width: 100%;
-  margin-bottom: 3%;
   text-align: top;
+  position: relative;
+  bottom: 0;
+}
+footer p {
+  margin: 0px 0px;
 }
 
 #end1 {
